srcs/tester/base/vector/operator[]/log.txt
./base/vector/operator[]/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::vector<int> myvector (10); // 10 zero-initialized elements
 ^
./base/vector/operator[]/patched.cpp:9:2: error: use of undeclared identifier 'ft'
 ft::vector<int>::size_type sz = myvector.size();
 ^
./base/vector/operator[]/patched.cpp:9:34: error: use of undeclared identifier 'myvector'
 ft::vector<int>::size_type sz = myvector.size();
                                 ^
./base/vector/operator[]/patched.cpp:12:32: error: use of undeclared identifier 'myvector'
 for (unsigned i=0; i<sz; i++) myvector[i]=i;
                               ^
./base/vector/operator[]/patched.cpp:18:9: error: use of undeclared identifier 'myvector'
 temp = myvector[sz-1-i];
        ^
./base/vector/operator[]/patched.cpp:19:2: error: use of undeclared identifier 'myvector'
 myvector[sz-1-i]=myvector[i];
 ^
./base/vector/operator[]/patched.cpp:19:19: error: use of undeclared identifier 'myvector'
 myvector[sz-1-i]=myvector[i];
                  ^
./base/vector/operator[]/patched.cpp:20:2: error: use of undeclared identifier 'myvector'
 myvector[i]=temp;
 ^
./base/vector/operator[]/patched.cpp:25:22: error: use of undeclared identifier 'myvector'
 std::cout << ' ' << myvector[i];
                     ^
9 errors generated.
